--- a/components/Shared/CodeField/CodeField.module.scss
+++ b/components/Shared/CodeField/CodeField.module.scss
@@ -1,15 +1,14 @@
-@use "../../../styles/tools.scss" as *;
 .codeField {
     display: flex;
-    gap:toVw(30,"desktop");
+    gap:25px;
   &Input {
     background: #222222;
-    border: toVw(2,"desktop") solid rgba(191, 191, 191, 0.53);
-    border-radius: toVw(16,"desktop");
-    width: toVw(66,"desktop");
-    height: toVw(63,"desktop");
+    border: 2px solid rgba(191, 191, 191, 0.53);
+    border-radius: 10px;
+    width: 55px;
+    height: 55px;
     text-align: center;
-    font-size: toVw(23,"desktop");
+    font-size: 20px;
     color:white;
   }
 }
