--- a/styles/fonts.scss
+++ b/styles/fonts.scss
@@ -17,6 +17,12 @@
     font-style: normal;
 }
 @font-face {
+    font-family: 'Helvetica Light';
+    src: url('../assets/fonts/Helvetica/helveticaneuecyr_ultralight.otf') format('opentype');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
     font-family: 'Helvetica Bold';
     src: url('../assets/fonts/Helvetica/HelveticaNeueCyr-Bold.ttf') format('truetype');
     font-weight: normal;
