--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,5 +1,7 @@
 @import './reset.scss';
-@import './fonts.scss';
+@import './fonts.scss'; 
+@import './animate.min.scss'; 
+
 html,
 body {
   padding: 0;
