--- a/components/Landing/Home/Home.module.scss
+++ b/components/Landing/Home/Home.module.scss
@@ -1,3 +1,4 @@
+
 .landingHome {
   width: 100%;
   height: 100vh;
@@ -5,46 +6,93 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 113px 0px 0px 70px;
+  padding:  165px 0px 30px 198px;
 }
-
-.landingHomeGradientLine {
-  height: 1080px;
-  background: linear-gradient(
-    180deg,
-    #ffa800 0%,
-    #fc6666 27.08%,
-    #e93e9f 57.77%,
-    #5f5cfc 100%
-  );
-  width: 140px;
+.landingHomeBackgroundPattern {
   position: absolute;
+  left: -180px;
+  font-family: "Mr Dafoe";
+  font-weight: 400;
+  font-size: 515px;
+  color: #201f1f;
   z-index: 0;
-  left: 0px;
-  top: 0px;
 }
 
-.landingHomeIntroText {
-  max-width: 928px;
-  width: 100%;
-  font-size: 170px;
-  line-height: 70%;
-  font-family: "NeueMachina";
-  text-transform: uppercase;
-  color: #ffffff;
-  z-index: 2;
+.landingHomeAppPreview {
+  height: 100%;
 }
 
-.landingHomeIntroTextLogo {
-  font-family: "Helvetica Light";
-  padding: 0px 20px 0px 80px;
+.landingHomeText{
+  max-width: 762px;
+  color: #FFFFFF;
+  z-index: 1;
 }
 
-.landingHomeIntroTextStar {
-  font-family: "Helvetica Bold";
-  font-size: 100px;
-  vertical-align: super;
+.landingHomeTitle{
+  font-family: 'Golos Bold';
+  font-size: 64px;
+  line-height: 100%;
+  margin-bottom: 30px;
 }
 
-.landingHomeAppPreview{
+.landingHomeDescription{
+  font-size: 20px;
+  line-height: 120%;
+  max-width: 544px;
+  font-family: 'Helvetica Light';
+}
+
+
+.landingHomeAppPreviewImage{
+  height: 100%;
+}
+
+@media screen and (max-width:1200px) {
+  .landingHome {
+    padding: 165px 0px 50px 20px;
+  }
+  .landingHomeBackgroundPattern {
+    left: -100px;
+    font-size: 300px;
+  }
+  .landingHomeText{
+    width: 100%;
+    padding-right: 50px;
+  }
+  
+  .landingHomeTitle{
+    font-size: 48px;
+    margin-bottom: 20px;
+  }
+  
+  .landingHomeDescription{
+    font-size: 18px;
+  }
+}
+
+@media screen and (max-width:830px) {
+  .landingHome {
+    gap: 40px;
+    padding: 135px 0px 50px 20px;
+    flex-direction: column;
+  }
+  .landingHomeText{
+    max-width: 330px;
+    align-self: flex-start;
+    padding-right: 0;
+  }
+  .landingHomeAppPreview {
+    align-self: flex-end;
+    height: 50vw;
+  }
+
+  .landingHomeTitle{
+    font-size: 36px;
+    margin-bottom: 20px;
+  }
+  
+  .landingHomeDescription{
+    font-size: 16px;
+  }
+  
 }
