--- a/styles/fonts.scss
+++ b/styles/fonts.scss
@@ -5,6 +5,18 @@
     font-style: normal;
 }
 @font-face {
+    font-family: 'Golos Bold';
+    src: url('../assets/fonts/Golos/Golos-Text_Bold.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Mr Dafoe';
+    src: url('../assets/fonts/MrDafoe/MrDafoe-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
     font-family: 'NeueMachina';
     src: url('../assets/fonts/NeueMachina/NeueMachina-Ultrabold.otf') format('opentype');
     font-weight: normal;
@@ -18,7 +30,7 @@
 }
 @font-face {
     font-family: 'Helvetica Light';
-    src: url('../assets/fonts/Helvetica/helveticaneuecyr_ultralight.otf') format('opentype');
+    src: url('../assets/fonts/Helvetica/HelveticaNeueCyr-Light.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
