--- a/components/Shared/CodeField/CodeField.module.scss
+++ b/components/Shared/CodeField/CodeField.module.scss
@@ -1,6 +1,6 @@
 .codeField {
     display: flex;
-    gap:25px;
+    justify-content: space-between;
   &Input {
     background: #222222;
     border: 2px solid rgba(191, 191, 191, 0.53);
@@ -10,5 +10,14 @@
     text-align: center;
     font-size: 20px;
     color:white;
+  }
+}
+
+
+@media screen and (max-width:400px) {
+  .codeFieldInput{
+    width: 45px;
+    height: 45px;
+    border-radius: 10px;
   }
 }
