--- a/components/Shared/Input/Input.module.scss
+++ b/components/Shared/Input/Input.module.scss
@@ -28,6 +28,7 @@
   &:-webkit-autofill:focus,
   &:-webkit-autofill:active {
     -webkit-box-shadow: 0 0 0 30px #222222 inset !important;
+    -webkit-text-fill-color: #d6d6d6 !important;
   }
 }
 
